freebsd-utils (9.2+ds2-1) UNRELEASED; urgency=low

  * Add /etc/sysctl.conf. It used to be provided by procps, but now it
    isn't. Its content is kernel-specific anyway, so let's just use the
    FreeBSD version.

 -- Robert Millan <rmh@debian.org>  Fri, 27 Dec 2013 13:59:57 +0100

freebsd-utils (9.2+ds1-1) unstable; urgency=low

  * Drop freebsd-geom transitional package.
  * Fetch source code securely (https) in get-orig-source.
  * Split udeb build from normal build, using a separate objdir by means
    of MAKEOBJDIRPREFIX. This allows us to:
    - Optimize udeb build for size (-Os).
    - Build udeb with -DWITHOUT_IPX_SUPPORT (for ifconfig).
    - Restrict -DWITHOUT_JAIL only to udeb build. This effectively brings
      back jail support to ifconfig.
    - As a side requirement, source code is moved to src/ directory to
      prevent dh_install from mistakenly installing source directories as
      if they were executable files.
  * Leave -lbsdxml untouched (latest freebsd-glue supports it).
  * netstat_numeric_default.diff: Honor -n flag when listing the default
    route (for compatibility with Linux route(8)).
  * route_list.diff: When route is invoked with no arguments, fallback
    to "netstat -r" to list existing routes (for compatibility with
    Linux route(8)).

 -- Robert Millan <rmh@debian.org>  Wed, 25 Dec 2013 18:46:00 +0100

freebsd-utils (9.2-2) unstable; urgency=low

  [ Robert Millan ]
  * Simplify 031_savecore.diff by using zopen() from freebsd-glue.
  * Enable ifmac.c, iffib.c and ifpfsync.c in ifconfig.
    (Closes: #728374)
  * Remove cons25 transition kludge (was only needed for squeeze->wheezy
    upgrades).
  * Fix permissions for /dev/dri/card* devices.
  * Remove a few gratuitous library dependencies.
  * Misc patchset cleanup.
  * Remove kludge in jail(8). Use libutil-freebsd-dev to satisfy
    login_cap.h dependency instead.
  * Require freebsd-glue >= 0.2.4 to ensure trimdomain from libutil is